# cpe-shim-tauri

./: .gitmodules  LICENSE  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  network.rs  network_ffi.rs
