[package]
name = "cloudpilotemu"
version = "0.1.0"
description = "CloudpilotEmu - Palm Pilot emulator"
authors = ["you"]
edition = "2021"

[lib]
name = "cloudpilotemu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
